# avanamy-backend

./: .gitignore  README.md  alembic.ini  docker-compose.yml  pyproject.toml  pytest.ini  test_full_api.py  test_missing_lines.py  test_scanner_direct.py  test_scanner_fixed.py
.claude/: settings.local.json
docs/: AI-Enhanced Documentation (Phase 2).md  AVANAMY_PROJECT_DOCUMENTATION.md
scripts/: create_modified_spec.py  openmeteo-modified-v2.yml  openmeteo-original.yml  poll_watched_apis.py  scan_code_repositories.py  serve_spec.py  test_manual_poll.py  test_phase4a.sh
src/avanamy/: logging_config.py  main.py  metrics.py  tracing.py
src/avanamy/api/: main.py
src/avanamy/api/dependencies/: tenant.py
src/avanamy/api/routes/: alert_configs.py  alert_history.py  api_specs.py  code_repositories.py  docs.py  endpoint_health.py  github_app.py  github_oauth.py  products.py  (+8 more)
src/avanamy/auth/: __init__.py  clerk.py  permissions.py  rbac.py
src/avanamy/cli/: main.py
src/avanamy/db/: database.py  models.py  session.py
src/avanamy/models/: __init__.py  alert_configuration.py  alert_history.py  api_product.py  api_spec.py  base_model.py  code_repository.py  documentation_artifact.py  endpoint_health.py  generation_job.py  impact_analysis.py  mixins.py  organization_invitation.py  organization_member.py  provider.py  tenant.py  user.py  version_history.py  watched_api.py
src/avanamy/repositories/: __init__.py  api_spec_repository.py  code_repo_repository.py  documentation_artifact_repository.py  generation_job_repository.py  version_history_repository.py
src/avanamy/services/: ai_documentation_enhancer.py  ai_summary_service.py  alert_service.py  api_product_delete_service.py  api_spec_diff.py  api_spec_normalizer.py  api_spec_parser.py  api_spec_service.py  code_repo_scanner_service.py  code_scanner.py  documentation_generator.py  documentation_renderer.py  documentation_service.py  email_service.py  encryption_service.py  endpoint_health_service.py  github_api_service.py  github_app_service.py  github_oauth_service.py  impact_analysis_service.py  normalized_spec_service.py  organization_service.py  original_spec_artifact_service.py  polling_service.py  s3.py  spec_diff_engine.py  spec_normalizer.py  tenant_service.py  version_diff_service.py
src/avanamy/templates/: docs_base.html
src/avanamy/utils/: file_utils.py  filename_utils.py  s3_paths.py
src/models/: api_spec.py  documentation_artifact.py  generation_job.py  version_history.py
tests/: conftest.py
tests/api/: test_api_spec_upload.py  test_api_specs_route.py  test_code_repositories_routes.py  test_github_oauth_routes.py  test_main_upload.py  test_organizations_routes.py  test_products_routes.py  test_providers_routes.py  test_spec_docs_and_versions.py  test_watched_apis_routes.py
tests/auth/: test_clerk_auth.py
tests/cli/: test_cli_main.py
tests/models/: test_alert_configuration.py  test_alert_history.py  test_endpoint_health.py  test_watched_api.py
tests/repositories/: test_api_spec_repository.py  test_code_repo_repository.py  test_documentation_artifact_repository.py  test_generation_job_repository.py  test_version_history_repository.py
tests/services/: teset_api_specs_route.py  test_ai_summary_service.py  test_alert_service.py  test_api_product_delete_service.py  test_api_spec_diff.py  test_api_spec_normalizer.py  test_api_spec_parser.py  test_api_spec_service.py  test_api_specs_route.py  test_code_repo_scanner_service.py  test_code_scanner.py  test_docs_endpoint.py  test_documentation_generator.py  test_documentation_service.py  test_email_service.py  test_encryption_service.py  test_endpoint_health_service.py  test_github_api_service.py  test_github_oauth_service.py  test_organization_service.py  test_original_spec_artifact_service.py  test_polling_service.py  test_polling_service_bootstrap.py  test_s3_service.py  test_spec_normalizer.py  test_tenant_service.py  test_version_diff_service.py
tests/utils/: test_file_utils.py
(+37 files in other folders)
