[project]
name = "avanamy-backend"
version = "0.1.0"
description = "Backend for Avanamy API change detection"
authors = [
    { name = "Ken Gavazzi", email = "kenneth.gavazzi@gmail.com" }
]
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "fastapi>=0.121.2,<0.122.0",
    "uvicorn[standard] (>=0.38.0,<0.39.0)",
    "boto3 (>=1.40.76,<2.0.0)",
    "python-dotenv (>=1.2.1,<2.0.0)",
    "python-multipart (>=0.0.20,<0.0.21)"
]

# ---------------------------
# Poetry-specific settings
# ---------------------------

[tool.poetry]
packages = [
    { include = "avanamy", from = "src" }
]

[tool.poetry.scripts]
avanamy = "avanamy.cli.main:main"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
