[project]
name = "avanamy-backend"
version = "0.1.0"
description = "Backend for Avanamy API change detection"
authors = [
    { name = "Ken Gavazzi", email = "kenneth.gavazzi@gmail.com" }
]
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "fastapi>=0.121.2,<0.122.0",
    "uvicorn[standard] (>=0.38.0,<0.39.0)",
    "boto3 (>=1.40.76,<2.0.0)",
    "python-dotenv (>=1.2.1,<2.0.0)",
    "python-multipart (>=0.0.20,<0.0.21)",
    "alembic (>=1.17.2,<2.0.0)",
    "sqlalchemy[asyncio] (>=2.0.44,<3.0.0)",
    "asyncpg (>=0.30.0,<0.31.0)",
    "psycopg2-binary (>=2.9.11,<3.0.0)",
    "prometheus-fastapi-instrumentator (>=7.1.0,<8.0.0)",
    "opentelemetry-sdk (>=1.38.0,<2.0.0)",
    "opentelemetry-api (>=1.38.0,<2.0.0)",
    "opentelemetry-instrumentation-fastapi (>=0.59b0,<0.60)"
]

# ---------------------------
# Poetry-specific settings
# ---------------------------

[tool.poetry]
packages = [
    { include = "avanamy", from = "src" }
]

[tool.poetry.scripts]
# Console entry removed: CLI moved/removed. If you need a console script,
# re-add an entry here pointing to the desired callable.

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[dependency-groups]
dev = [
    "pytest (>=9.0.1,<10.0.0)"
]
